# quant_database

./: .gitignore  README.md  main.py  pyproject.toml
doc/: TABLE_NAMING_RULES.md  项目架构计划_20260426.md
prod_run/: backfill.yaml  prod.yaml  run_backfill.py  run_prod.py
src/quant_database/: cli.py  config.py
src/quant_database/core/: __init__.py  bootstrap.py  connection.py  upsert.py
src/quant_database/loaders/tushare/: __init__.py  loader.py
src/quant_database/loaders/yfinance/: __init__.py  loader.py
src/quant_database/providers/: tushare_client.py  yfinance_client.py
src/quant_database/schema/: __init__.py  base.py  market.py  metadata.py  reference.py
src/utils/: logger.py  tools.py
test_run/: one_day.yaml  run_one_day.py  run_tushare_one_day.py  run_yfinance_history.py  tushare_one_day.yaml
