[project]
name = "quant-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "polars>=1.30.0",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.3",
    "tushare>=1.4.29",
    "yfinance>=1.3.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project.scripts]
qdb = "quant_database.cli:main"
quant-database = "quant_database.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
